@@ -1,6 +1,7 @@
 Pending changes in the mainline
 ===============================
 
+* Option "EnableGdcm" to replace the built-in decoder of Orthanc with GDCM
 * Fixed rendering of 16bpp images if values are < 0 or >= 32768
 
 
